deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: online-boutique-prod.sandbox.runwhen.com.
  name: online-boutique
spec:
  ingressClassName: "ingress-nginx"
  rules:
    - host: online-boutique-prod.sandbox.runwhen.com
      http:
        paths:
          - backend:
              service:
                name: frontend-external
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - online-boutique-prod.sandbox.runwhen.com
      secretName: online-boutique-tls
